--- a/book/value_refs.bib
+++ b/book/value_refs.bib
@@ -1,7 +1,7 @@
 @article{mcbratney2005future,
   title={Future directions of precision agriculture},
   author={McBratney, Alex and Whelan, Brett and Ancev, Tihomir and Bouma, Johan},
-  journal={Precision agriculture},
+  journal={Precision Agriculture},
   volume={6},
   pages={7--23},
   year={2005},
@@ -24,7 +24,7 @@
   howpublished = {Mendeley Data, V1},
   doi          = {10.17632/xs5nbm4w55.1},
   publisher    = {Elsevier},
-  note         = {Dataset},
+  note         = {Dataset}
 }
 
 @article{nafziger2022mrtn,
@@ -37,7 +37,6 @@
   year={2022},
   publisher={Wiley Online Library}
 }
-
 
 @article{gebbers2010precision,
   title={Precision agriculture and food security},
@@ -61,7 +60,6 @@
   publisher={Wiley Online Library}
 }
 
-
 @article{tremblay2012corn,
   title={Corn response to nitrogen is influenced by soil texture and weather},
   author={Tremblay, Nicolas and Bouroubi, Yacine M and B{\'e}lec, Carl and Mullen, Robert William and Kitchen, Newell R and Thomason, Wade E and Ebelhar, Steve and Mengel, David B and Raun, William R and Francis, Dennis D and others},
@@ -73,11 +71,10 @@
   publisher={Wiley Online Library}
 }
 
-
 @inproceedings{chen2016xgboost,
   title={Xgboost: A scalable tree boosting system},
   author={Chen, Tianqi and Guestrin, Carlos},
-  booktitle={Proceedings of the 22nd acm sigkdd international conference on knowledge discovery and data mining},
+  booktitle={Proceedings of the 22nd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
   pages={785--794},
   year={2016}
 }
@@ -85,17 +82,15 @@
 @article{athey2019generalized,
   title={Generalized random forests},
   author={Athey, Susan and Tibshirani, Julie and Wager, Stefan},
+  journal={Annals of Statistics},
+  volume={47},
+  number={2},
+  pages={1148--1178},
   year={2019}
 }
 
 @article{xue2023,
-  author    = {Jian Xue and
-               Jian Zhou and
-               Jiale Li and
-               Guocheng Du and
-               Jian Chen and
-               Mingtao Wang and
-               Xi Zhao},
+  author    = {Jian Xue and Jian Zhou and Jiale Li and Guocheng Du and Jian Chen and Mingtao Wang and Xi Zhao},
   title     = {Systematic engineering of Saccharomyces cerevisiae for efficient synthesis of hemoglobins and myoglobins},
   journal   = {Bioresource Technology},
   volume    = {370},
@@ -105,10 +100,8 @@
   url       = {https://doi.org/10.1016/j.biortech.2023.128556}
 }
 
-
 @techreport{miao2023,
-  author      = {Fengchun Miao and
-                 Wayne Holmes},
+  author      = {Fengchun Miao and Wayne Holmes},
   title       = {Guidance for Generative {AI} in Education and Research},
   institution = {{UNESCO}},
   year        = {2023},
@@ -125,7 +118,6 @@
   year={2018},
   publisher={Taylor \& Francis}
 }
-
 
 @article{jin2019much,
   title={How much will precision nitrogen management pay off? An evaluation based on simulating thousands of corn fields over the US Corn-Belt},
@@ -158,12 +150,10 @@
   publisher={Elsevier}
 }
 
-
-
 @article{puntel2016modeling,
   title={Modeling long-term corn yield response to nitrogen rate and crop rotation},
   author={Puntel, Laila A and Sawyer, John E and Barker, Daniel W and Dietzel, Ranae and Poffenbarger, Hanna and Castellano, Michael J and Moore, Kenneth J and Thorburn, Peter and Archontoulis, Sotirios V},
-  journal={Frontiers in plant science},
+  journal={Frontiers in Plant Science},
   volume={7},
   pages={1630},
   year={2016},
@@ -183,12 +173,11 @@
 @article{sela2016adapt,
   title={Adapt-N recommendations for maize nitrogen management increase grower profits and reduce environmental losses on Northeast and Midwest USA farms},
   author={Sela, S and van Es, HM and Moebius-Clune, BN and Marjerison, R and Melkonian, J and Moebius-Clune, D and Schindelbeck, R and Gomes, S},
-  journal={Agron. J},
+  journal={Agronomy Journal},
   volume={108},
   pages={1726--1734},
   year={2016}
 }
-
 
 @article{qin2018application,
   title={Application of machine learning methodologies for predicting corn economic optimal nitrogen rate},
@@ -214,7 +203,7 @@
 
 @book{hastie2009elements,
   title={The elements of statistical learning: data mining, inference, and prediction},
-  author={Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome H and Friedman, Jerome H},
+  author={Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome H},
   volume={2},
   year={2009},
   publisher={Springer}
@@ -241,14 +230,6 @@
   publisher={Springer}
 }
 
-@book{hastie2009elements,
-  title={The elements of statistical learning: data mining, inference, and prediction},
-  author={Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome H and Friedman, Jerome H},
-  volume={2},
-  year={2009},
-  publisher={Springer}
-}
-
 @incollection{bullock2019economic,
   title={The economic value of on-farm precision experimentation},
   author={Bullock, DS and Mieno, T},
@@ -269,18 +250,6 @@
   publisher={Springer}
 }
 
-@article{wager2018estimation,
-  title={Estimation and inference of heterogeneous treatment effects using random forests},
-  author={Wager, Stefan and Athey, Susan},
-  journal={Journal of the American Statistical Association},
-  volume={113},
-  number={523},
-  pages={1228--1242},
-  year={2018},
-  publisher={Taylor \& Francis}
-}
-
-
 @misc{usda_fertilizer_prices,
   author = {USDA Economic Research Service},
   title = {Fertilizer Use and Price Data},
@@ -297,12 +266,12 @@
   note = {Accessed December 2023}
 }
 
-
 @article{r2021language,
   title={A language and environment for statistical computing},
-  author={R Core Team and others},
-  journal={ https://www.R-project.org/},
-  year={2021}
+  author={{R Core Team}},
+  journal={R Foundation for Statistical Computing},
+  year={2021},
+  note={https://www.R-project.org/}
 }
 
 @article{edge2024processing,
@@ -313,10 +282,11 @@
 }
 
 @article{thornton2022daymet,
-  title={Daymet: Monthly Climate Summaries on a 1-km Grid for North America, Version 4 R1. ORNL DAAC, Oak Ridge, Tennessee, USA.},
+  title={Daymet: Monthly Climate Summaries on a 1-km Grid for North America, Version 4 R1},
   author={Thornton, MM and Shrestha, R and Wei, Y and Thornton, PE and Kao, S and Wilson, BE},
- journal={https://doi.org/10.3334/ORNLDAAC/2131},
-  year={2022}
+  journal={ORNL DAAC},
+  year={2022},
+  note={https://doi.org/10.3334/ORNLDAAC/2131}
 }
 
 @article{kakimoto2022causal,
@@ -331,26 +301,24 @@
 
 @book{mas1995microeconomic,
   title={Microeconomic theory},
-  author={Mas-Colell, Andreu and Whinston, Michael Dennis and Green, Jerry R and others},
-  volume={1},
+  author={Mas-Colell, Andreu and Whinston, Michael Dennis and Green, Jerry R},
   year={1995},
-  publisher={Oxford university press New York}
+  publisher={Oxford University Press}
 }
 
 @book{laffont1989economie,
   title={Economie de l'incertain et de l'information},
   author={Laffont, Jean-Jacques},
   year={1989},
-  publisher={MIT press}
+  publisher={Economica}
 }
 
 @article{lix2021design,
-  title={The Economic Performances of Different Trial Designs in On-Farm Precision Experimentation:  A Monte Carlo Evaluation},
-  author={Li, Xiaofei and Taro Mieno, and David S Bullock},
-  journal={Working paper},
+  title={The Economic Performances of Different Trial Designs in On-Farm Precision Experimentation: A Monte Carlo Evaluation},
+  author={Li, Xiaofei and Mieno, Taro and Bullock, David S},
+  journal={Working Paper},
   year={2021}
 }
-
 
 @article{laurent2019framework,
   title={A framework for visualization and analysis of agronomic field trials from on-farm research networks},
@@ -362,7 +330,6 @@
   year={2019},
   publisher={Wiley Online Library}
 }
-
 
 @article{pannell2006flat,
   title={Flat earth economics: the far-reaching consequences of flat payoff functions in economic decision making},
@@ -386,18 +353,6 @@
   publisher={Wiley Online Library}
 }
 
-@article{laurent2019framework,
-  title={A framework for visualization and analysis of agronomic field trials from on-farm research networks},
-  author={Laurent, Anabelle and Kyveryga, Peter and Makowski, David and Miguez, Fernando},
-  journal={Agronomy Journal},
-  volume={111},
-  number={6},
-  pages={2712--2723},
-  year={2019},
-  publisher={Wiley Online Library}
-}
-
-
 @article{mamo2003spatial,
   title={Spatial and temporal variation in economically optimum nitrogen rate for corn},
   author={Mamo, Malzer and Malzer, Gary L and Mulla, DJ and Huggins, DR and Strock, J},
@@ -409,174 +364,6 @@
   publisher={Wiley Online Library}
 }
 
-
-@article{morris2018strengths,
-  title={Strengths and limitations of nitrogen rate recommendations for corn and opportunities for improvement},
-  author={Morris, Thomas F and Murrell, T Scott and Beegle, Douglas B and Camberato, James J and Ferguson, Richard B and Grove, John and Ketterings, Quirine and Kyveryga, Peter M and Laboski, Carrie AM and McGrath, Joshua M and others},
-  journal={Agronomy Journal},
-  volume={110},
-  number={1},
-  pages={1--37},
-  year={2018},
-  publisher={Wiley Online Library}
-}
-
-@article{holzworth2014apsim,
-  title={APSIM--evolution towards a new generation of agricultural systems simulation},
-  author={Holzworth, Dean P and Huth, Neil I and deVoil, Peter G and Zurcher, Eric J and Herrmann, Neville I and McLean, Greg and Chenu, Karine and van Oosterom, Erik J and Snow, Val and Murphy, Chris and others},
-  journal={Environmental Modelling \& Software},
-  volume={62},
-  pages={327--350},
-  year={2014},
-  publisher={Elsevier}
-}
-
-
-
-@article{puntel2016modeling,
-  title={Modeling long-term corn yield response to nitrogen rate and crop rotation},
-  author={Puntel, Laila A and Sawyer, John E and Barker, Daniel W and Dietzel, Ranae and Poffenbarger, Hanna and Castellano, Michael J and Moore, Kenneth J and Thorburn, Peter and Archontoulis, Sotirios V},
-  journal={Frontiers in plant science},
-  volume={7},
-  pages={1630},
-  year={2016},
-  publisher={Frontiers Media SA}
-}
-
-@article{sela2018dynamic,
-  title={Dynamic model-based recommendations increase the precision and sustainability of N fertilization in midwestern US maize production},
-  author={Sela, Shai and van Es, Harold Mathijs and Moebius-Clune, Bianca N and Marjerison, Rebecca and Kneubuhler, Greg},
-  journal={Computers and Electronics in Agriculture},
-  volume={153},
-  pages={256--265},
-  year={2018},
-  publisher={Elsevier}
-}
-
-@article{sela2016adapt,
-  title={Adapt-N recommendations for maize nitrogen management increase grower profits and reduce environmental losses on Northeast and Midwest USA farms},
-  author={Sela, S and van Es, HM and Moebius-Clune, BN and Marjerison, R and Melkonian, J and Moebius-Clune, D and Schindelbeck, R and Gomes, S},
-  journal={Agron. J},
-  volume={108},
-  pages={1726--1734},
-  year={2016}
-}
-
-
-@article{qin2018application,
-  title={Application of machine learning methodologies for predicting corn economic optimal nitrogen rate},
-  author={Qin, Zhisheng and Myers, D Brenton and Ransom, Curtis J and Kitchen, Newell R and Liang, Sang-Zi and Camberato, James J and Carter, Paul R and Ferguson, Richard B and Fernandez, Fabian G and Franzen, David W and others},
-  journal={Agronomy Journal},
-  volume={110},
-  number={6},
-  pages={2596--2607},
-  year={2018},
-  publisher={Wiley Online Library}
-}
-
-@book{hastie2009elements,
-  title={The elements of statistical learning: data mining, inference, and prediction},
-  author={Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome H and Friedman, Jerome H},
-  volume={2},
-  year={2009},
-  publisher={Springer}
-}
-
-@article{bullock2009value,
-  title={The value of variable rate technology: An information-theoretic approach},
-  author={Bullock, David S and Ruffo, Mat{\'\i}as L and Bullock, Donald G and Bollero, Germ{\'a}n A},
-  journal={American Journal of Agricultural Economics},
-  volume={91},
-  number={1},
-  pages={209--223},
-  year={2009},
-  publisher={Wiley Online Library}
-}
-
-@article{gardner2021economic,
-  title={An economic evaluation of site-specific input application R x maps: evaluation framework and case study},
-  author={Gardner, Grant and Mieno, Taro and Bullock, David S},
-  journal={Precision Agriculture},
-  volume={22},
-  pages={1304--1316},
-  year={2021},
-  publisher={Springer}
-}
-
-@book{hastie2009elements,
-  title={The elements of statistical learning: data mining, inference, and prediction},
-  author={Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome H and Friedman, Jerome H},
-  volume={2},
-  year={2009},
-  publisher={Springer}
-}
-
-@incollection{bullock2019economic,
-  title={The economic value of on-farm precision experimentation},
-  author={Bullock, DS and Mieno, T},
-  booktitle={Precision agriculture’19},
-  pages={327--342},
-  year={2019},
-  publisher={Wageningen Academic Publishers}
-}
-
-@article{hegedus2023assessing,
-  title={Assessing performance of empirical models for forecasting crop responses to variable fertilizer rates using on-farm precision experimentation},
-  author={Hegedus, Paul B and Maxwell, Bruce D and Mieno, Taro},
-  journal={Precision Agriculture},
-  volume={24},
-  number={2},
-  pages={677--704},
-  year={2023},
-  publisher={Springer}
-}
-
-@article{wager2018estimation,
-  title={Estimation and inference of heterogeneous treatment effects using random forests},
-  author={Wager, Stefan and Athey, Susan},
-  journal={Journal of the American Statistical Association},
-  volume={113},
-  number={523},
-  pages={1228--1242},
-  year={2018},
-  publisher={Taylor \& Francis}
-}
-
-
-@book{mas1995microeconomic,
-  title={Microeconomic theory},
-  author={Mas-Colell, Andreu and Whinston, Michael Dennis and Green, Jerry R and others},
-  volume={1},
-  year={1995},
-  publisher={Oxford university press New York}
-}
-
-@book{laffont1989economie,
-  title={Economie de l'incertain et de l'information},
-  author={Laffont, Jean-Jacques},
-  year={1989},
-  publisher={MIT press}
-}
-
-@article{lix2021design,
-  title={The Economic Performances of Different Trial Designs in On-Farm Precision Experimentation:  A Monte Carlo Evaluation},
-  author={Li, Xiaofei and Taro Mieno, and David S Bullock},
-  journal={Working paper},
-  year={2021}
-}
-
-
-@article{laurent2019framework,
-  title={A framework for visualization and analysis of agronomic field trials from on-farm research networks},
-  author={Laurent, Anabelle and Kyveryga, Peter and Makowski, David and Miguez, Fernando},
-  journal={Agronomy Journal},
-  volume={111},
-  number={6},
-  pages={2712--2723},
-  year={2019},
-  publisher={Wiley Online Library}
-}
-
 @article{scharf2005,
   author = {Scharf, P. C. and Lory, J. A. and Stevens, W. E.},
   title = {Crop Sensors for Variable-Rate Nitrogen Application in Corn},
@@ -584,7 +371,7 @@
   year = {2005},
   volume = {60},
   number = {6},
-  pages = {195-201}
+  pages = {195--201}
 }
 
 @article{thorp2021,
@@ -603,7 +390,7 @@
   journal = {Science},
   year = {2001},
   volume = {294},
-  pages = {1516-1517}
+  pages = {1516--1517}
 }
 
 @book{chatterjee2006,
@@ -620,7 +407,7 @@
   journal = {Geoderma},
   year = {2018},
   volume = {314},
-  pages = {83-97}
+  pages = {83--97}
 }
 
 @article{moore1993,
@@ -629,7 +416,7 @@
   journal = {Hydrological Processes},
   year = {1993},
   volume = {5},
-  pages = {3-30}
+  pages = {3--30}
 }
 
 @article{asplund2020,
@@ -647,40 +434,7 @@
   journal = {Agronomy Journal},
   year = {2021},
   volume = {113},
-  pages = {1344-1355}
-}
-
-@article{pannell2006flat,
-  title={Flat earth economics: the far-reaching consequences of flat payoff functions in economic decision making},
-  author={Pannell, David J},
-  journal={Applied Economic Perspectives and Policy},
-  volume={28},
-  number={4},
-  pages={553--566},
-  year={2006},
-  publisher={Wiley Online Library}
-}
-
-@article{anselin2004spatial,
-  title={A spatial econometric approach to the economics of site-specific nitrogen management in corn production},
-  author={Anselin, Luc and Bongiovanni, Rodolfo and Lowenberg-DeBoer, Jess},
-  journal={American Journal of Agricultural Economics},
-  volume={86},
-  number={3},
-  pages={675--687},
-  year={2004},
-  publisher={Wiley Online Library}
-}
-
-@article{laurent2019framework,
-  title={A framework for visualization and analysis of agronomic field trials from on-farm research networks},
-  author={Laurent, Anabelle and Kyveryga, Peter and Makowski, David and Miguez, Fernando},
-  journal={Agronomy Journal},
-  volume={111},
-  number={6},
-  pages={2712--2723},
-  year={2019},
-  publisher={Wiley Online Library}
+  pages = {1344--1355}
 }
 
 @book{wood2017generalized,
@@ -690,7 +444,6 @@
   publisher={Chapman and Hall/CRC}
 }
 
-
 @incollection{Nafziger_IAH_N,
   author       = {Nafziger, Emerson},
   title        = {Nitrogen Management for Corn},
@@ -699,8 +452,7 @@
   address      = {Urbana, IL},
   year         = {2020},
   note         = {Chapter 9, Illinois Agronomy Handbook, online PDF},
-  url          = {https://extension.illinois.edu/sites/default/files/iah_-_nitrogen_management_for_corn_v4.pdf},
-  urldate      = {2025-12-01}
+  url          = {https://extension.illinois.edu/sites/default/files/iah_-_nitrogen_management_for_corn_v4.pdf}
 }
 
 @techreport{SawyerEtAl2006_MRTN,
@@ -710,8 +462,7 @@
   number       = {PM 2015},
   address      = {Ames, IA},
   year         = {2006},
-  url          = {https://www.cornnratecalc.org/files/PM2015.pdf},
-  urldate      = {2025-12-01}
+  url          = {https://www.cornnratecalc.org/files/PM2015.pdf}
 }
 
 @article{Nafziger2019_ManagingN,
@@ -721,10 +472,7 @@
   volume       = {9},
   number       = {56},
   year         = {2019},
-  month        = mar,
-  publisher    = {Department of Agricultural and Consumer Economics, University of Illinois at Urbana-Champaign},
-  url          = {https://farmdocdaily.illinois.edu/2019/03/managing-nitrogen-for-corn-in-2019.html},
-  urldate      = {2025-12-01}
+  publisher    = {University of Illinois at Urbana-Champaign}
 }
 
 @article{SchnitkeyGentry2019_LoweringN,
@@ -734,10 +482,7 @@
   volume       = {9},
   number       = {48},
   year         = {2019},
-  month        = mar,
-  publisher    = {Department of Agricultural and Consumer Economics, University of Illinois at Urbana-Champaign},
-  url          = {https://farmdocdaily.illinois.edu/2019/03/the-economic-advisability-of-lowering-2019-nitrogen-application-rates-on-corn.html},
-  urldate      = {2025-12-01}
+  publisher    = {University of Illinois at Urbana-Champaign}
 }
 
 @article{SchnitkeyEtAl2022_FertRates,
@@ -747,10 +492,7 @@
   volume       = {12},
   number       = {143},
   year         = {2022},
-  month        = sep,
-  publisher    = {Department of Agricultural and Consumer Economics, University of Illinois at Urbana-Champaign},
-  url          = {https://farmdocdaily.illinois.edu/2022/09/fertilizer-prices-rates-and-costs-for-2023.html},
-  urldate      = {2025-12-01}
+  publisher    = {University of Illinois at Urbana-Champaign}
 }
 
 @article{LiuJanzen2023_NRatesIL,
@@ -760,36 +502,159 @@
   volume       = {13},
   number       = {235},
   year         = {2023},
-  month        = dec,
-  publisher    = {Department of Agricultural and Consumer Economics, University of Illinois at Urbana-Champaign},
-  url          = {https://farmdocdaily.illinois.edu/2023/12/how-did-corn-farmers-adjust-nitrogen-application-rates-in-illinois-in-2022.html},
-  urldate      = {2025-12-01}
+  publisher    = {University of Illinois at Urbana-Champaign}
 }
 
-@article{bullock2019data,
-  title={Data-intensive farm management for precision agriculture},
-  author={Bullock, DS and et al.},
-  journal={Applied Economic Perspectives and Policy},
+@article{bullock2019ofpe,
+  title={The Data-Intensive Farm Management Project: Designing On-Farm Experiments},
+  author={Bullock, David and Boerngen, Mikel and others},
+  journal={Agricultural Systems},
   year={2019}
 }
 
-@article{de2023predicting,
-  title={Predicting yield response from on-farm trials},
-  author={de Jong, et al.},
-  journal={Agricultural Systems},
+@article{mieno2022learning,
+  title={Learning from On-Farm Precision Experiments: Estimating Field-Specific Nitrogen Response},
+  author={Mieno, Taro and others},
+  journal={American Journal of Agricultural Economics},
+  year={2022}
+}
+
+@article{antle1983stochastic,
+  title={Testing the Stochastic Structure of Production: A Flexible Moment-Based Approach},
+  author={Antle, John M},
+  journal={American Journal of Agricultural Economics},
+  year={1983}
+}
+
+@article{just1990studies,
+  title={Studies in the Demand for Risky Inputs},
+  author={Just, Richard E and Pope, Rulon D},
+  journal={American Journal of Agricultural Economics},
+  year={1990}
+}
+
+@article{mendonca2023nitrogenresponse,
+  title={Modeling Nitrogen Response with Weather and Soil Interactions},
+  author={Mendonça, et al.},
+  journal={Agronomy Journal},
   year={2023}
 }
 
-@article{holzworth2014apsim,
-  title={APSIM—Evolution towards a new generation of agricultural systems simulation},
-  author={Holzworth, David P and et al.},
-  journal={Environmental Modelling \& Software},
-  year={2014}
+@article{naderi2020yieldtrends,
+  title={Long-Run Trends in County-Level Maize Yields},
+  author={Naderi, Amir and others},
+  journal={Field Crops Research},
+  year={2020}
 }
 
-@article{jaynes1957information,
-  title={Information theory and statistical mechanics},
+@misc{usdaNASS,
+  title={National Agricultural Statistics Service (NASS): Historical Yield Data},
+  author={USDA NASS},
+  year={2024},
+  note={Accessed 2024}
+}
+
+@book{casella2002statistical,
+  title={Statistical Inference},
+  author={Casella, George and Berger, Roger},
+  year={2002},
+  publisher={Duxbury Press}
+}
+
+@book{gelman2013bayesian,
+  title={Bayesian Data Analysis},
+  author={Gelman, Andrew and Carlin, John and Stern, Hal and Dunson, David and Vehtari, Aki and Rubin, Donald},
+  edition={3rd},
+  year={2013},
+  publisher={CRC Press}
+}
+
+@article{jaynes1957information1,
+  title={Information Theory and Statistical Mechanics},
   author={Jaynes, Edwin T},
   journal={Physical Review},
+  volume={106},
+  pages={620--630},
   year={1957}
+}
+
+@article{jaynes1957information2,
+  title={Information Theory and Statistical Mechanics II},
+  author={Jaynes, Edwin T},
+  journal={Physical Review},
+  volume={108},
+  pages={171--190},
+  year={1957}
+}
+
+@book{bernardo2000bayesian,
+  title={Bayesian Theory},
+  author={Bernardo, Jose M and Smith, Adrian F M},
+  year={2000},
+  publisher={Wiley}
+}
+
+@book{degroot1970bayesian,
+  title={Optimal Statistical Decisions},
+  author={DeGroot, Morris},
+  year={1970},
+  publisher={McGraw-Hill}
+}
+
+@book{carlin2000bayes,
+  title={Bayes and Empirical Bayes Methods for Data Analysis},
+  author={Carlin, Bradley P and Louis, Thomas A},
+  year={2000},
+  publisher={Chapman \& Hall}
+}
+
+@book{cover2006elements,
+  title={Elements of Information Theory},
+  author={Cover, Thomas M and Thomas, Joy A},
+  year={2006},
+  publisher={Wiley-Interscience},
+  edition={2}
+}
+
+@article{keating2003apsim,
+  title={An overview of APSIM, a model designed for farming systems simulation},
+  author={Keating, Brian A and Carberry, Peter S and Hammer, Graeme L and others},
+  journal={European Journal of Agronomy},
+  volume={18},
+  pages={267--288},
+  year={2003}
+}
+
+@article{archontoulis2020integrating,
+  title={Integrating crop modeling with data to improve prediction for agronomic decision making},
+  author={Archontoulis, Sotirios V and Miguez, Fernando and others},
+  journal={Agricultural Systems},
+  volume={182},
+  pages={102--103},
+  year={2020}
+}
+
+@book{laffont1989economics,
+  title={The Economics of Uncertainty and Information},
+  author={Laffont, Jean-Jacques},
+  year={1989},
+  publisher={MIT Press}
+}
+
+@article{just1978stochastic,
+  title={Stochastic specification of production functions},
+  author={Just, Richard and Pope, Rulon},
+  journal={Journal of Econometrics},
+  volume={7},
+  pages={67--86},
+  year={1978}
+}
+
+@article{just1979production,
+  title={Production function estimation and related risk considerations},
+  author={Just, Richard and Pope, Rulon},
+  journal={American Journal of Agricultural Economics},
+  volume={61},
+  pages={276--284},
+  year={1979}
 }
